Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
X3DDECL int X3DCALL xBufferHeight(int buffer = NULL);
X3DDECL Handle X3DCALL xCatchTimestamp();
X3DDECL float X3DCALL xGetElapsedTime(Handle timeStamp);
X3DDECL void X3DCALL xSetBuffer(int buffer = NULL);
X3DDECL void X3DCALL xSetMRT(Handle buffer, int frame, int index);
X3DDECL void X3DCALL xUnSetMRT();
X3DDECL int X3DCALL xGetNumberRT();
X3DDECL Handle X3DCALL xTextureBuffer(Handle texture, int frame = 0);
X3DDECL void X3DCALL xLoadBuffer(int buffer, const char * path);
X3DDECL void X3DCALL xWritePixel(int x, int y, DWORD argb, int buffer = NULL);
X3DDECL void X3DCALL xCopyPixel(int sx, int sy, int sourceBuffer, int dx, int dy, int destinationBuffer);
X3DDECL void X3DCALL xCopyPixelFast(int sx, int sy, int sourceBuffer, int dx, int dy, int destinationBuffer);
X3DDECL void X3DCALL xCopyRect(int sx, int sy, int sw, int sh, int dx, int dy, int sourceBuffer, int destinationBuffer);
X3DDECL int X3DCALL xGraphicsBuffer();
X3DDECL DWORD X3DCALL xGetColor(int x, int y);
X3DDECL DWORD X3DCALL xReadPixel(int x, int y, int buffer = NULL);
X3DDECL int X3DCALL xGraphicsWidth(bool isVirtual = true);
X3DDECL int X3DCALL xGraphicsHeight(bool isVirtual = true);
X3DDECL int X3DCALL xGraphicsDepth();
X3DDECL int X3DCALL xColorAlpha();
X3DDECL int X3DCALL xColorRed();
X3DDECL int X3DCALL xColorGreen();
X3DDECL int X3DCALL xColorBlue();
X3DDECL void X3DCALL xClsColor(int red, int green, int blue, int alpha = 255);
X3DDECL void X3DCALL xClearWorld(bool entities = true, bool brushes = true, bool textures = true);
X3DDECL void X3DCALL xColor(int red, int green, int blue, int alpha = 255);
X3DDECL void X3DCALL xCls();
X3DDECL void X3DCALL xUpdateWorld(float speed = 1.0f);
X3DDECL void X3DCALL xRenderEntity(Handle camera, Handle entity, float tween = 1.0f);
X3DDECL void X3DCALL xRenderWorld(float tween = 1.0f, bool renderShadows = false);
X3DDECL void X3DCALL xSetAutoTB(bool flag);
X3DDECL int X3DCALL xMaxClipPlanes();
X3DDECL void X3DCALL xWireframe(int state);
X3DDECL void X3DCALL xDither(int state);
X3DDECL void X3DCALL xSetSkinningMethod(int skinMethod);
X3DDECL DWORD X3DCALL xTrisRendered();
X3DDECL int X3DCALL xDIPCounter();
X3DDECL int X3DCALL xSurfRendered();
X3DDECL int X3DCALL xEntityRendered();
X3DDECL void X3DCALL xAmbientLight(int red, int green, int blue, Handle world = NULL);
X3DDECL int X3DCALL xGetFPS();
X3DDECL void X3DCALL xAntiAlias(int state);
X3DDECL void X3DCALL xSetTextureFiltering(int filter);
X3DDECL void X3DCALL xStretchRect(Handle texture1, int x1, int y1, int width1, int height1, Handle texture2, int x2, int y2, int width2, int height2, int filter);
X3DDECL void X3DCALL xStretchBackBuffer(Handle texture, int x, int y, int width, int height, int filter);
X3DDECL Handle X3DCALL xGetDevice();
X3DDECL void X3DCALL xReleaseGraphics();
X3DDECL void X3DCALL xShowPointer();
X3DDECL void X3DCALL xHidePointer();
X3DDECL void X3DCALL xCreateDSS(int width, int height);
X3DDECL void X3DCALL xDeleteDSS();
X3DDECL void X3DCALL xGridColor(int centerRed, int centerGreen, int centerBlue, int gridRed, int gridGreen, int gridBlue);
X3DDECL void X3DCALL xDrawGrid(float x, float z, int gridSize, int range);
X3DDECL void X3DCALL xDrawBBox(bool draw, bool zOn, int red, int green, int blue, int alpha);
X3DDECL void X3DCALL xGraphics3D(int width = 1024, int height = 768, int depth = 0, int mode = 0, int vsync = 1);
X3DDECL void X3DCALL xGraphicsAspectRatio(float aspectRatio);
X3DDECL void X3DCALL xGraphicsBorderColor(int red, int green, int blue);
X3DDECL Handle X3DCALL xGetRenderWindow();
X3DDECL void X3DCALL xKey(const char * key);
X3DDECL void X3DCALL xSetEngineSetting(const char * parameter, const char * value);
X3DDECL const char * X3DCALL xGetEngineSetting(const char * parameter);
X3DDECL int X3DCALL xHWInstancingAvailable();
X3DDECL int X3DCALL xShaderInstancingAvailable();
X3DDECL void X3DCALL xSetShaderLayer(int layer);
X3DDECL int X3DCALL xGetShaderLayer();
X3DDECL void X3DCALL xDrawMovementGizmo(float x, float y, float z, int selectMask = 0);
X3DDECL void X3DCALL xDrawScaleGizmo(float x, float y, float z, int selectMask = 0, float sx = 1.0f, float sy = 1.0f, float sz = 1.0f);
X3DDECL void X3DCALL xDrawRotationGizmo(float x, float y, float z, int selectMask = 0, float pitch = 0.0f, float yaw = 0.0f, float roll = 0.0f);