Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs


	public static int BufferWidth()
	{
		return BufferWidth(0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xBufferHeight")]
	public static extern int BufferHeight(int buffer);

	public static int BufferHeight()
	{
		return BufferHeight(0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xCatchTimestamp")]
	public static extern int CatchTimestamp();

	[DllImport("xors3d.dll", EntryPoint = "xGetElapsedTime")]
	public static extern float GetElapsedTime(int timeStamp);

	[DllImport("xors3d.dll", EntryPoint = "xSetBuffer")]
	public static extern void SetBuffer(int buffer);

	public static void SetBuffer()
	{
		 SetBuffer(0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetMRT")]
	public static extern void SetMRT(int buffer, int frame, int index);

	[DllImport("xors3d.dll", EntryPoint = "xUnSetMRT")]
	public static extern void UnSetMRT();

	[DllImport("xors3d.dll", EntryPoint = "xGetNumberRT")]
	public static extern int GetNumberRT();

	[DllImport("xors3d.dll", EntryPoint = "xTextureBuffer")]
	public static extern int TextureBuffer(int texture, int frame);

	public static int TextureBuffer(int texture)
	{
		return TextureBuffer(texture, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLoadBuffer")]
	public static extern void LoadBuffer_(int buffer, StringBuilder path);
	public static void LoadBuffer(int buffer, string path)
	{
		LoadBuffer_(buffer, new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xWritePixel")]
	public static extern void WritePixel(int x, int y, int argb, int buffer);

	public static void WritePixel(int x, int y, int argb)
	{
		 WritePixel(x, y, argb, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xCopyPixel")]
	public static extern void CopyPixel(int sx, int sy, int sourceBuffer, int dx, int dy, int destinationBuffer);

	[DllImport("xors3d.dll", EntryPoint = "xCopyPixelFast")]
	public static extern void CopyPixelFast(int sx, int sy, int sourceBuffer, int dx, int dy, int destinationBuffer);

	[DllImport("xors3d.dll", EntryPoint = "xCopyRect")]
	public static extern void CopyRect(int sx, int sy, int sw, int sh, int dx, int dy, int sourceBuffer, int destinationBuffer);

	[DllImport("xors3d.dll", EntryPoint = "xGraphicsBuffer")]
	public static extern int GraphicsBuffer();

	[DllImport("xors3d.dll", EntryPoint = "xGetColor")]
	public static extern int GetColor(int x, int y);

	[DllImport("xors3d.dll", EntryPoint = "xReadPixel")]
	public static extern int ReadPixel(int x, int y, int buffer);

	public static int ReadPixel(int x, int y)
	{
		return ReadPixel(x, y, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xGraphicsWidth")]
	public static extern int GraphicsWidth(bool isVirtual);

	public static int GraphicsWidth()
	{
		return GraphicsWidth(true);
	}
	[DllImport("xors3d.dll", EntryPoint = "xGraphicsHeight")]
	public static extern int GraphicsHeight(bool isVirtual);

	public static int GraphicsHeight()
	{
		return GraphicsHeight(true);
	}
	[DllImport("xors3d.dll", EntryPoint = "xGraphicsDepth")]
	public static extern int GraphicsDepth();

	[DllImport("xors3d.dll", EntryPoint = "xColorAlpha")]
	public static extern int ColorAlpha();

	[DllImport("xors3d.dll", EntryPoint = "xColorRed")]
	public static extern int ColorRed();

	[DllImport("xors3d.dll", EntryPoint = "xColorGreen")]
	public static extern int ColorGreen();

	[DllImport("xors3d.dll", EntryPoint = "xColorBlue")]
	public static extern int ColorBlue();

	[DllImport("xors3d.dll", EntryPoint = "xClsColor")]
	public static extern void ClsColor(int red, int green, int blue, int alpha);

	public static void ClsColor(int red, int green, int blue)
	{
		 ClsColor(red, green, blue, 255);
	}
	[DllImport("xors3d.dll", EntryPoint = "xClearWorld")]
	public static extern void ClearWorld(bool entities, bool brushes, bool textures);

	public static void ClearWorld(bool entities, bool brushes)
	{
		 ClearWorld(entities, brushes, true);
	}
	public static void ClearWorld(bool entities)
	{
		 ClearWorld(entities, true, true);
	}
	public static void ClearWorld()
	{
		 ClearWorld(true, true, true);
	}
	[DllImport("xors3d.dll", EntryPoint = "xColor")]
	public static extern void Color(int red, int green, int blue, int alpha);

	public static void Color(int red, int green, int blue)
	{
		 Color(red, green, blue, 255);
	}
	[DllImport("xors3d.dll", EntryPoint = "xCls")]
	public static extern void Cls();

	[DllImport("xors3d.dll", EntryPoint = "xUpdateWorld")]
	public static extern void UpdateWorld(float speed);

	public static void UpdateWorld()
	{
		 UpdateWorld(1.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xRenderEntity")]
	public static extern void RenderEntity(int camera, int entity, float tween);

	public static void RenderEntity(int camera, int entity)
	{
		 RenderEntity(camera, entity, 1.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xRenderWorld")]
	public static extern void RenderWorld(float tween, bool renderShadows);

	public static void RenderWorld(float tween)
	{
		 RenderWorld(tween, false);
	}
	public static void RenderWorld()
	{
		 RenderWorld(1.0f, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetAutoTB")]
	public static extern void SetAutoTB(bool flag);

	[DllImport("xors3d.dll", EntryPoint = "xMaxClipPlanes")]
	public static extern int MaxClipPlanes();

	[DllImport("xors3d.dll", EntryPoint = "xWireframe")]
	public static extern void Wireframe(int state);

	[DllImport("xors3d.dll", EntryPoint = "xDither")]
	public static extern void Dither(int state);

	[DllImport("xors3d.dll", EntryPoint = "xSetSkinningMethod")]
	public static extern void SetSkinningMethod(int skinMethod);

	[DllImport("xors3d.dll", EntryPoint = "xTrisRendered")]
	public static extern int TrisRendered();

	[DllImport("xors3d.dll", EntryPoint = "xDIPCounter")]
	public static extern int DIPCounter();

	[DllImport("xors3d.dll", EntryPoint = "xSurfRendered")]
	public static extern int SurfRendered();

	[DllImport("xors3d.dll", EntryPoint = "xEntityRendered")]
	public static extern int EntityRendered();

	[DllImport("xors3d.dll", EntryPoint = "xAmbientLight")]
	public static extern void AmbientLight(int red, int green, int blue, int world);

	public static void AmbientLight(int red, int green, int blue)
	{
		 AmbientLight(red, green, blue, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetFPS")]
	public static extern int GetFPS();

	[DllImport("xors3d.dll", EntryPoint = "xAntiAlias")]
	public static extern void AntiAlias(int state);

	[DllImport("xors3d.dll", EntryPoint = "xSetTextureFiltering")]
	public static extern void SetTextureFiltering(int filter);

	[DllImport("xors3d.dll", EntryPoint = "xStretchRect")]
	public static extern void StretchRect(int texture1, int x1, int y1, int width1, int height1, int texture2, int x2, int y2, int width2, int height2, int filter);

	[DllImport("xors3d.dll", EntryPoint = "xStretchBackBuffer")]
	public static extern void StretchBackBuffer(int texture, int x, int y, int width, int height, int filter);

	[DllImport("xors3d.dll", EntryPoint = "xGetDevice")]
	public static extern int GetDevice();

	[DllImport("xors3d.dll", EntryPoint = "xReleaseGraphics")]
	public static extern void ReleaseGraphics();

	[DllImport("xors3d.dll", EntryPoint = "xShowPointer")]
	public static extern void ShowPointer();

	[DllImport("xors3d.dll", EntryPoint = "xHidePointer")]
	public static extern void HidePointer();

	[DllImport("xors3d.dll", EntryPoint = "xCreateDSS")]
	public static extern void CreateDSS(int width, int height);

	[DllImport("xors3d.dll", EntryPoint = "xDeleteDSS")]
	public static extern void DeleteDSS();

	[DllImport("xors3d.dll", EntryPoint = "xGridColor")]
	public static extern void GridColor(int centerRed, int centerGreen, int centerBlue, int gridRed, int gridGreen, int gridBlue);

	[DllImport("xors3d.dll", EntryPoint = "xDrawGrid")]
	public static extern void DrawGrid(float x, float z, int gridSize, int range);

	[DllImport("xors3d.dll", EntryPoint = "xDrawBBox")]
	public static extern void DrawBBox(bool draw, bool zOn, int red, int green, int blue, int alpha);

	[DllImport("xors3d.dll", EntryPoint = "xGraphics3D")]
	public static extern void Graphics3D(int width, int height, int depth, int mode, int vsync);

	public static void Graphics3D(int width, int height, int depth, int mode)
	{
		 Graphics3D(width, height, depth, mode, 1);
	}
	public static void Graphics3D(int width, int height, int depth)
	{
		 Graphics3D(width, height, depth, 0, 1);
	}
	public static void Graphics3D(int width, int height)
	{
		 Graphics3D(width, height, 0, 0, 1);
	}
	public static void Graphics3D(int width)
	{
		 Graphics3D(width, 768, 0, 0, 1);
	}
	public static void Graphics3D()
	{
		 Graphics3D(1024, 768, 0, 0, 1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xGraphicsAspectRatio")]
	public static extern void GraphicsAspectRatio(float aspectRatio);

	[DllImport("xors3d.dll", EntryPoint = "xGraphicsBorderColor")]
	public static extern void GraphicsBorderColor(int red, int green, int blue);

	[DllImport("xors3d.dll", EntryPoint = "xGetRenderWindow")]
	public static extern int GetRenderWindow();

	[DllImport("xors3d.dll", EntryPoint = "xKey")]
	public static extern void Key_(StringBuilder key);
	public static void Key(string key)
	{
		Key_(new StringBuilder(key));
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEngineSetting")]
	public static extern void SetEngineSetting_(StringBuilder parameter, StringBuilder value);
	public static void SetEngineSetting(string parameter, string value)
	{
		SetEngineSetting_(new StringBuilder(parameter), new StringBuilder(value));
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetEngineSetting")]
	public static extern IntPtr GetEngineSetting_(StringBuilder parameter);	public static string GetEngineSetting(string parameter)
	{
		return Marshal.PtrToStringAnsi(GetEngineSetting_(new StringBuilder(parameter)));
	}

	[DllImport("xors3d.dll", EntryPoint = "xHWInstancingAvailable")]
	public static extern int HWInstancingAvailable();

	[DllImport("xors3d.dll", EntryPoint = "xShaderInstancingAvailable")]
	public static extern int ShaderInstancingAvailable();

	[DllImport("xors3d.dll", EntryPoint = "xSetShaderLayer")]
	public static extern void SetShaderLayer(int layer);

	[DllImport("xors3d.dll", EntryPoint = "xGetShaderLayer")]
	public static extern int GetShaderLayer();

	[DllImport("xors3d.dll", EntryPoint = "xDrawMovementGizmo")]
	public static extern void DrawMovementGizmo(float x, float y, float z, int selectMask);

	public static void DrawMovementGizmo(float x, float y, float z)
	{
		 DrawMovementGizmo(x, y, z, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xDrawScaleGizmo")]
	public static extern void DrawScaleGizmo(float x, float y, float z, int selectMask, float sx, float sy, float sz);

	public static void DrawScaleGizmo(float x, float y, float z, int selectMask, float sx, float sy)
	{
		 DrawScaleGizmo(x, y, z, selectMask, sx, sy, 1.0f);
	}
	public static void DrawScaleGizmo(float x, float y, float z, int selectMask, float sx)
	{
		 DrawScaleGizmo(x, y, z, selectMask, sx, 1.0f, 1.0f);
	}
	public static void DrawScaleGizmo(float x, float y, float z, int selectMask)
	{
		 DrawScaleGizmo(x, y, z, selectMask, 1.0f, 1.0f, 1.0f);
	}
	public static void DrawScaleGizmo(float x, float y, float z)
	{
		 DrawScaleGizmo(x, y, z, 0, 1.0f, 1.0f, 1.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xDrawRotationGizmo")]
	public static extern void DrawRotationGizmo(float x, float y, float z, int selectMask, float pitch, float yaw, float roll);
